fixed issue with edit button for shortcuts in folders on mobile devices

--- a/src/CSS/editShortcutStyle.css
+++ b/src/CSS/editShortcutStyle.css
@@ -17,6 +17,8 @@
     animation-fill-mode: forwards;
 
     overflow: hidden;
+
+    z-index: 998;
 }
 
 .colorOverlay p{
